# cgns-gui

./: .gitignore  DEVELOPMENT.md  MIGRATION_FINAL_REPORT.md  PROJECT_STATUS.md  README.md  TEST_REPORT.md  cgns-gui.spec  compare_loaders.py  create_cgns_with_solution.py  environment-ci.yml  pyproject.toml  setup-uv.ps1  setup-uv.sh  test_app.py  test_app_detailed.py  test_pycgns_basic.py  test_pycgns_loader.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  ci-fix-summary.md  dev-log.md  development-plan.md  pycgns-migration-summary.md  pycgns-migration.md  release-guide.md  windows-opengl-solution.md  windows-opengl-troubleshooting.md  windows-packaging-guide.md  windows-setup.md
docs/development/: NEXT_STEPS.md
docs/migration/: MIGRATION_SUMMARY.md  MIGRATION_VERIFICATION_REPORT.md
docs/testing/: GUI_TEST_CHECKLIST.md  GUI_TEST_REPORT.md  KNOWN_TEST_ISSUES.md  QUICK_TEST_GUIDE.md  RENDERING_BUG_FIX.md
src/cgns_gui/: __init__.py  app.py  i18n.py  interaction.py  loader.py  loader_h5py_backup.py  loader_pycgns.py  model.py  scene.py  selection.py
src/cgns_gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cgns_gui/translations/: README.md
tests/: conftest.py  test_app.py  test_interaction.py  test_loader.py  test_scene.py
tests/fixtures/: test_structured_solution.cgns  test_with_solution.cgns
tools/: build_package.py
