[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgns-gui"
version = "0.1.0"
description = "PySide-based CGNS visualization tool."
readme = "README.md"
authors = [{ name = "Team", email = "dev@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "vtk>=9.3",
    "h5py>=3.10",
    "numpy>=1.26"
]
dynamic = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "ruff>=0.6",
    "build>=1.2"
]

[project.scripts]
cgns-gui = "cgns_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
qt_api = "pyside6"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["test_app.py", "test_app_detailed.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
